litteDuckParser.java
// Generated from litteDuck.g4 by ANTLR 4.13.1

    import java.util.Stack;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class litteDuckParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, ID=30, CTE_INT=31, CTE_FLOAT=32, 
		CTE_STRING=33, NEWLINE=34, WHITESPACE=35;
	public static final int
		RULE_programa = 0, RULE_vars = 1, RULE_md_vars = 2, RULE_def_vars = 3, 
		RULE_def_vars_ = 4, RULE_list_ids = 5, RULE_list_ids_ = 6, RULE_type = 7, 
		RULE_funcs = 8, RULE_md_funcs_ = 9, RULE_md_funcs = 10, RULE_ids_funcs = 11, 
		RULE_ids_funcs_ = 12, RULE_body = 13, RULE_md_body = 14, RULE_md_body_ = 15, 
		RULE_statement = 16, RULE_assign = 17, RULE_expresion = 18, RULE_md_exp = 19, 
		RULE_expresion_op = 20, RULE_exp = 21, RULE_termino_ = 22, RULE_termino_op = 23, 
		RULE_termino = 24, RULE_factor_ = 25, RULE_factor_op = 26, RULE_factor = 27, 
		RULE_factor_op_ = 28, RULE_factor_cte = 29, RULE_cte = 30, RULE_condition = 31, 
		RULE_condition_else = 32, RULE_cicle = 33, RULE_f_call = 34, RULE_md_f_call = 35, 
		RULE_md_f_call_ = 36, RULE_print = 37, RULE_md_print = 38, RULE_md_print_ = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "vars", "md_vars", "def_vars", "def_vars_", "list_ids", "list_ids_", 
			"type", "funcs", "md_funcs_", "md_funcs", "ids_funcs", "ids_funcs_", 
			"body", "md_body", "md_body_", "statement", "assign", "expresion", "md_exp", 
			"expresion_op", "exp", "termino_", "termino_op", "termino", "factor_", 
			"factor_op", "factor", "factor_op_", "factor_cte", "cte", "condition", 
			"condition_else", "cicle", "f_call", "md_f_call", "md_f_call_", "print", 
			"md_print", "md_print_"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "';'", "'main'", "'end'", "'var'", "':'", "','", "'int'", 
			"'float'", "'void'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'='", 
			"'>'", "'<'", "'!='", "'+'", "'-'", "'*'", "'/'", "'if'", "'else'", "'do'", 
			"'while'", "'print'", null, null, null, null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "ID", "CTE_INT", "CTE_FLOAT", "CTE_STRING", 
			"NEWLINE", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "litteDuck.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public litteDuckParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public Functions f = new Functions();
		public ArrayList<TVariables> globalVar = new ArrayList<TVariables>();
		public ArrayList<String> dirFunc = new ArrayList<String>();
		public CuboSemantico cuboSemantico = new CuboSemantico();
		public ArrayList<Quad> quads = new ArrayList<Quad>();
		public Stack<String> PilaO = new Stack<>();
		public Stack<String> PilaT = new Stack<>();
		public Stack<String> POper = new Stack<>();
		public Stack<Integer> PJumps = new Stack<>();
		public int avail = 0;
		public int quad_cont = 0;
		public boolean isLocalVar = false;
		public Token ID;
		public TerminalNode ID() { return getToken(litteDuckParser.ID, 0); }
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public FuncsContext funcs() {
			return getRuleContext(FuncsContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__0);
			setState(81);
			((ProgramaContext)_localctx).ID = match(ID);
			 ((ProgramaContext)getInvokingContext(0)).dirFunc.add((((ProgramaContext)_localctx).ID!=null?((ProgramaContext)_localctx).ID.getText():null)); 
			        System.out.println("------debug-------");
			         System.out.println("ahi va excepcion");
			        
			        if(!((ProgramaContext)getInvokingContext(0)).POper.empty()){
			            if( "<".equals(((ProgramaContext)getInvokingContext(0)).POper.peek()) ){
			                System.out.println("dentro: NO EXCEPTION");
			            }
			        }
			 
			        System.out.println("NO EXCEPTION");
			        System.out.println("hola");
			        System.out.println("------debug-------");
			    
			    
			setState(83);
			match(T__1);
			setState(84);
			vars();
			setState(85);
			funcs();
			setState(86);
			match(T__2);
			setState(87);
			body();
			setState(88);
			match(T__3);

			        System.out.println("quad_cont: "+((ProgramaContext)getInvokingContext(0)).quad_cont);
			        System.out.println("-------CUADRUPOS-------");
			        System.out.println(((ProgramaContext)getInvokingContext(0)).quads);
			        System.out.println("-------CUADRUPOS_FIN-------");
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarsContext extends ParserRuleContext {
		public Md_varsContext md_vars() {
			return getRuleContext(Md_varsContext.class,0);
		}
		public VarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).enterVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).exitVars(this);
		}
	}

	public final VarsContext vars() throws RecognitionException {
		VarsContext _localctx = new VarsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_vars);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				md_vars();
				}
				break;
			case T__2:
			case T__9:
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Md_varsContext extends ParserRuleContext {
		public Def_varsContext def_vars() {
			return getRuleContext(Def_varsContext.class,0);
		}
		public Md_varsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_md_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).enterMd_vars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).exitMd_vars(this);
		}
	}

	public final Md_varsContext md_vars() throws RecognitionException {
		Md_varsContext _localctx = new Md_varsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_md_vars);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T__4);
			setState(96);
			def_vars();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Def_varsContext extends ParserRuleContext {
		public ArrayList<String> pendigIds = new ArrayList<String>();
		public TypeContext type;
		public List_idsContext list_ids() {
			return getRuleContext(List_idsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Def_vars_Context def_vars_() {
			return getRuleContext(Def_vars_Context.class,0);
		}
		public Def_varsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).enterDef_vars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).exitDef_vars(this);
		}
	}

	public final Def_varsContext def_vars() throws RecognitionException {
		Def_varsContext _localctx = new Def_varsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_def_vars);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			list_ids();
			setState(99);
			match(T__5);
			setState(100);
			((Def_varsContext)_localctx).type = type();

			        for(int i = 0; i < ((Def_varsContext)getInvokingContext(3)).pendigIds.size(); i++){
			            TVariables _variable = new TVariables(((Def_varsContext)getInvokingContext(3)).pendigIds.get(i), (((Def_varsContext)_localctx).type!=null?_input.getText(((Def_varsContext)_localctx).type.start,((Def_varsContext)_localctx).type.stop):null), null);
			            if(((ProgramaContext)getInvokingContext(0)).isLocalVar) {

			                if ( ((FuncsContext)getInvokingContext(8)).localVar.contains(_variable) || ((ProgramaContext)getInvokingContext(0)).globalVar.contains(_variable) ) {
			                    System.err.println("ERROR: Double definition for local variable: "+((Def_varsContext)getInvokingContext(3)).pendigIds.get(i) );
			                } else { 
			                    ((FuncsContext)getInvokingContext(8)).localVar.add(_variable);
			                }

			            } else {

			                if ( ((ProgramaContext)getInvokingContext(0)).globalVar.contains(_variable) ) {
			                    System.err.println("ERROR: Double definition for global variable: "+((Def_varsContext)getInvokingContext(3)).pendigIds.get(i) );
			                } else {
			                    ((ProgramaContext)getInvokingContext(0)).globalVar.add(_variable);
			                }

			            }
			        }
			    
			setState(102);
			match(T__1);
			setState(103);
			def_vars_();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Def_vars_Context extends ParserRuleContext {
		public Def_varsContext def_vars() {
			return getRuleContext(Def_varsContext.class,0);
		}
		public Def_vars_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_vars_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).enterDef_vars_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).exitDef_vars_(this);
		}
	}

	public final Def_vars_Context def_vars_() throws RecognitionException {
		Def_vars_Context _localctx = new Def_vars_Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_def_vars_);
		try {
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				def_vars();
				}
				break;
			case T__2:
			case T__9:
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class List_idsContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode ID() { return getToken(litteDuckParser.ID, 0); }
		public List_ids_Context list_ids_() {
			return getRuleContext(List_ids_Context.class,0);
		}
		public List_idsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_ids; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).enterList_ids(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).exitList_ids(this);
		}
	}

	public final List_idsContext list_ids() throws RecognitionException {
		List_idsContext _localctx = new List_idsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_list_ids);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			((List_idsContext)_localctx).ID = match(ID);
			 ((Def_varsContext)getInvokingContext(3)).pendigIds.add((((List_idsContext)_localctx).ID!=null?((List_idsContext)_localctx).ID.getText():null)); 
			setState(111);
			list_ids_();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class List_ids_Context extends ParserRuleContext {
		public List_idsContext list_ids() {
			return getRuleContext(List_idsContext.class,0);
		}
		public List_ids_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_ids_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).enterList_ids_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).exitList_ids_(this);
		}
	}

	public final List_ids_Context list_ids_() throws RecognitionException {
		List_ids_Context _localctx = new List_ids_Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_list_ids_);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				match(T__6);
				setState(114);
				list_ids();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_la = _input.LA(1);
			if ( !(_la==T__7 || _la==T__8) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncsContext extends ParserRuleContext {
		public ArrayList<TVariables> localVar = new ArrayList<TVariables>();
		public Md_funcsContext md_funcs() {
			return getRuleContext(Md_funcsContext.class,0);
		}
		public Md_funcs_Context md_funcs_() {
			return getRuleContext(Md_funcs_Context.class,0);
		}
		public FuncsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).enterFuncs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).exitFuncs(this);
		}
	}

	public final FuncsContext funcs() throws RecognitionException {
		FuncsContext _localctx = new FuncsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funcs);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				((ProgramaContext)getInvokingContext(0)).isLocalVar =  true;
				setState(121);
				md_funcs();
				setState(122);
				md_funcs_();
				((ProgramaContext)getInvokingContext(0)).isLocalVar =  false;
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Md_funcs_Context extends ParserRuleContext {
		public FuncsContext funcs() {
			return getRuleContext(FuncsContext.class,0);
		}
		public Md_funcs_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_md_funcs_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).enterMd_funcs_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).exitMd_funcs_(this);
		}
	}

	public final Md_funcs_Context md_funcs_() throws RecognitionException {
		Md_funcs_Context _localctx = new Md_funcs_Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_md_funcs_);
		try {
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				funcs();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Md_funcsContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode ID() { return getToken(litteDuckParser.ID, 0); }
		public Ids_funcsContext ids_funcs() {
			return getRuleContext(Ids_funcsContext.class,0);
		}
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public Md_funcsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_md_funcs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).enterMd_funcs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).exitMd_funcs(this);
		}
	}

	public final Md_funcsContext md_funcs() throws RecognitionException {
		Md_funcsContext _localctx = new Md_funcsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_md_funcs);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(T__9);
			setState(133);
			((Md_funcsContext)_localctx).ID = match(ID);


			        if ( ((ProgramaContext)getInvokingContext(0)).dirFunc.contains((((Md_funcsContext)_localctx).ID!=null?((Md_funcsContext)_localctx).ID.getText():null)) ) {
			            System.err.println("ERROR: Double definition for function: "+(((Md_funcsContext)_localctx).ID!=null?((Md_funcsContext)_localctx).ID.getText():null) );
			        } else {
			            ((ProgramaContext)getInvokingContext(0)).dirFunc.add((((Md_funcsContext)_localctx).ID!=null?((Md_funcsContext)_localctx).ID.getText():null));
			        }

			        
			setState(135);
			match(T__10);
			setState(136);
			ids_funcs();
			setState(137);
			match(T__11);
			setState(138);
			match(T__12);
			setState(139);
			vars();
			setState(140);
			body();
			setState(141);
			match(T__13);
			setState(142);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ids_funcsContext extends ParserRuleContext {
		public Token ID;
		public TypeContext type;
		public TerminalNode ID() { return getToken(litteDuckParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Ids_funcs_Context ids_funcs_() {
			return getRuleContext(Ids_funcs_Context.class,0);
		}
		public Ids_funcsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ids_funcs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).enterIds_funcs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof litteDuckListener ) ((litteDuckListener)listener).exitIds_funcs(this);
		}
	}

	public final Ids_funcsContext ids_funcs() throws RecognitionException {
		Ids_funcsContext _localctx = new Ids_funcsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_ids_funcs);
		try {
			setState(151);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				((Ids_funcsContext)_localctx).ID = match(ID);
				setState(145);
				match(T__5);
				setState(146);
				((Ids_funcsContext)_localctx).type = type();

				        TVariables _variable = new TVariables((((Ids_funcsContext)_localctx).ID!=null?((Ids_funcsContext)_localctx).ID.getText():null), (((Ids_funcsContext)_localctx).type!=null?_input.getText(((Ids_funcsContext)_localctx).type.start,((Ids_funcsContext)_localctx).type.stop):null), null);

				        if ( ((FuncsContext)getInvokingContext(8)).localVar.contains(_variable) || ((ProgramaContext)getInvokingContext(0)).globalVar.contains(_variable) ) {
				            System.err.println("ERROR: Double definition for local variable parameter: "+(((Ids_funcsContext)_localctx).ID!=null?((Ids_funcsContext)_localctx).ID.getText():null) );
				        } else {
				            ((FuncsContext)getInvokingContext(8)).localVar.add(_variable);
				        }

				        
				setState(148);
				ids_funcs_();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
